[package]
name = "bystander"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-epoch = "0.9.3"
loom = "0.5.0"

[target.'cfg(crossbeam_loom)'.dependencies.crossbeam-epoch]
features = ["loom"]